--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <script type="text/javascript" src="js/modals/todoItem.js"></script>
     <script type="text/javascript" src="js/collections//todoItems.js"></script>
+    <script type="text/javascript" src="js/views/todoItemView.js"></script>
+
     <script type="text/javascript" src="js/main.js"></script>
     
 </body>
