input with data field added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="js/modals/todoItem.js"></script>
     <script type="text/javascript" src="js/collections//todoItems.js"></script>
     <script type="text/javascript" src="js/views/todoItemView.js"></script>
+    <script type="text/javascript" src="js/views/todoItemsView.js"></script>
 
     <script type="text/javascript" src="js/main.js"></script>
     
